Changed label for UserName

--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Welcome to source tree</h1>
-    Username : <input type="text" id="username" />
+    UsernName : <input type="text" id="username" />
     <br />
     Password : <input type="password" id="password" />
 </body>
